feat(agent): wire sandbox file.patch as apply_patch for coding agent
Coding Agent 新增 apply_patch 工具，对已有文本文件精确应用统一 Diff：Worker
路径经 file.patch 原样透传，本地路径经 UnifiedPatchApplier 在内存校验后写回。
read_file 返回原始字节 SHA-256 供 expectedHash 使用，write_file 仍用于新建或
整文件替换。本地写回采用临时文件+原子替换、父级真实路径校验防符号链接越界，
非法路径字符归类为工具错误。Review/Plan Agent 保持只读。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>